@@ -1,4 +1,5 @@
 === 1.6.0 ====
+    * log_info, log_debug and log_warning methods
     * using io.BytesIO insead of StringIO
     * format python2.6 fix
     * new documentation for some methods and function
